--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -131,7 +131,13 @@
     user-select:none;
     cursor:pointer;
   }
-  a:active{
+   a:hover{
+    position:relative;
+    top:2px;
+    margin-top: 2px;
+    box-shadow:0 5px 0 #30006e;
+  }
+  a:hover:active{
     position:relative;
     top:7px;
     margin-top: 7px;
