--- a/mcacountdown/beta/timer.html
+++ b/mcacountdown/beta/timer.html
@@ -48,7 +48,7 @@
   <br>
   <br>
   <br>
-  <a id="plct" class="disabled" onclick="atc();">Prefer Light Color Theme Countdown</a>
+  <a id="plct" class="disabled" onclick="plct();">Prefer Light Color Theme Countdown</a>
   <br>
   <br>
   <br>
@@ -338,16 +338,28 @@
 <script src="confetti.js"></script>
 
 <script>
-function setCookie(key, value) {
-            var expires = new Date();
-            expires.setTime(expires.getTime() + (1 * 24 * 60 * 60 * 1000));
-            document.cookie = key + '=' + value + ';expires=' + expires.toUTCString();
-        }
-
-        function getCookie(key) {
-            var keyValue = document.cookie.match('(^|;) ?' + key + '=([^;]*)(;|$)');
-            return keyValue ? keyValue[2] : null;
-        }
+function setCookie(name,value,days) {
+    var expires = "";
+    if (days) {
+        var date = new Date();
+        date.setTime(date.getTime() + (days*24*60*60*1000));
+        expires = "; expires=" + date.toUTCString();
+    }
+    document.cookie = name + "=" + (value || "")  + expires + "; path=/";
+}
+function getCookie(name) {
+    var nameEQ = name + "=";
+    var ca = document.cookie.split(';');
+    for(var i=0;i < ca.length;i++) {
+        var c = ca[i];
+        while (c.charAt(0)==' ') c = c.substring(1,c.length);
+        if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
+    }
+    return null;
+}
+function eraseCookie(name) {   
+    document.cookie = name +'=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+}
 
 document.addEventListener( 'visibilitychange' , function() {
     if (document.hidden) {
@@ -441,35 +453,35 @@ var x = setInterval(function() {
 }, 1000);
 
 function arorf(){
-  if(getCookie(arorf)){
-    setCookie(arorf, 0);
+  if(getCookie('arorf')){
+    setCookie('arorf', '0');
   }
   else{
-    setCookie(arorf, 1);
+    setCookie('arorf', '1');
   }
 }
 function coce(){
-  if(getCookie(coce)){
-    setCookie(coce, 0);
+  if(getCookie('coce')){
+    setCookie('coce', '0');
   }
   else{
-    setCookie(coce, 1);
+    setCookie('coce', '1');
   }
 }
 function atc(){
-  if(getCookie(atc)){
-    setCookie(atc, 0);
+  if(getCookie('atc')){
+    setCookie('atc', '0');
   }
   else{
-    setCookie(atc, 1);
+    setCookie('atc', '1');
   }
 }
 function plct(){
-  if(getCookie(plct)){
-    setCookie(plct, 0);
+  if(getCookie('plct')){
+    setCookie('plct', '0');
   }
   else{
-    setCookie(plct, 1);
+    setCookie('plct', '1');
   }
 }
 
