--- a/mcacountdown/beta/timer.html
+++ b/mcacountdown/beta/timer.html
@@ -402,7 +402,7 @@ document.getElementById("ad_container").classList.remove("hidden");
 
 var x = setInterval(function() {
 
-  if (getCookie("arorf") = "true") {
+  if (getCookie("arorf")) {
   document.getElementById("arorf").classList.add("enabled");
   document.getElementById("arorf").classList.remove("disabled");
   }
@@ -410,7 +410,7 @@ var x = setInterval(function() {
   document.getElementById("arorf").classList.remove("enabled");
   document.getElementById("arorf").classList.add("disabled");
   }
-  if (getCookie("coce") = "true") {
+  if (getCookie("coce")) {
   document.getElementById("coce").classList.add("enabled");
   document.getElementById("coce").classList.remove("disabled");
   }
@@ -418,7 +418,7 @@ var x = setInterval(function() {
   document.getElementById("coce").classList.remove("enabled");
   document.getElementById("coce").classList.add("disabled");
   }
-  if (getCookie("atc") = "true") {
+  if (getCookie("atc")) {
   document.getElementById("atc").classList.add("enabled");
   document.getElementById("atc").classList.remove("disabled");
   }
@@ -426,7 +426,7 @@ var x = setInterval(function() {
   document.getElementById("atc").classList.remove("enabled");
   document.getElementById("atc").classList.add("disabled");
   }
-if (getCookie("plct") = "true") {
+if (getCookie("plct")) {
   document.getElementById("plct").classList.add("enabled");
   document.getElementById("plct").classList.remove("disabled");
   }
